data/issues_nolabel/nolabel_test_8056.txt
error installing tenserflow

Hello Gents,
I am trying to install the TenserFlow  but when i reach and type this command:
"bazel build -c opt --config=cuda //tensorflow/tools/pip_package:build_pip_package"
after following all instruction in the following link:
"https://alliseesolutions.wordpress.com/2016/07/05/how-to-install-gpu-tensorflow-0-9-from-sources-ubuntu-14-04/"
i get the following error (I managed to reduced errors from 5 to only this one):
NOTE: i am a beginner in Linux  (Ubuntu 14.04) and thus i require step by step instructions if possible.
ERROR: /home/maher/tensorflow/tensorflow/compiler/tf2xla/BUILD:23:1: C++ compilation of rule '//tensorflow/compiler/tf2xla:xla_compiler' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command external/local_config_cuda/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter ... (remaining 180 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/compiler/tf2xla/xla_compiler.cc: In function 'tensorflow::Status tensorflow::{anonymous}::CheckSignature(const DataTypeVector&, const std::vectortensorflow::XlaCompiler::Argument&)':
tensorflow/compiler/tf2xla/xla_compiler.cc:48:34: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
for (int i = 0; i < types.size(); ++i) {
^
tensorflow/compiler/tf2xla/xla_compiler.cc: In member function 'tensorflow::Status tensorflow::XlaCompiler::BuildExecutable(const tensorflow::XlaCompiler::CompilationResult&, std::unique_ptrxla::LocalExecutable)':
tensorflow/compiler/tf2xla/xla_compiler.cc:139:52: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
for (int i = 0; i < result.xla_input_shapes.size(); ++i) {
^
tensorflow/compiler/tf2xla/xla_compiler.cc: In function 'tensorflow::Status tensorflow::{anonymous}::BuildArguments(const std::vectortensorflow::XlaCompiler::Argument&, bool, xla::ComputationBuilder, std::vectortensorflow::XlaContext::Argument, std::vector, std::vector<xla::Shape, std::allocatorxla::Shape >)':
tensorflow/compiler/tf2xla/xla_compiler.cc:228:8: error: 'size_typ' is not a member of 'std::vectortensorflow::XlaCompiler::Argument'
for (std::vectorXlaCompiler::Argument::size_typ i = 0;
^
tensorflow/compiler/tf2xla/xla_compiler.cc:228:53: error: expected ';' before 'i'
for (std::vectorXlaCompiler::Argument::size_typ i = 0;
^
tensorflow/compiler/tf2xla/xla_compiler.cc:229:8: error: 'i' was not declared in this scope
i < args.size(); ++i) {
^
tensorflow/compiler/tf2xla/xla_compiler.cc: In member function 'tensorflow::Status tensorflow::XlaCompiler::CompileGraph(const string&, std::unique_ptrtensorflow::Graph, tensorflow::FunctionLibraryRuntime, const std::vectortensorflow::XlaCompiler::Argument&, tensorflow::XlaCompiler::CompilationResult*)':
tensorflow/compiler/tf2xla/xla_compiler.cc:480:20: error: 'VariableWrite' is not a member of 'tensorflow::XlaCompiler'
for (std::vectorXlaCompiler::VariableWrite::size_type  i = 0;
^
tensorflow/compiler/tf2xla/xla_compiler.cc:480:20: error: 'VariableWrite' is not a member of 'tensorflow::XlaCompiler'
tensorflow/compiler/tf2xla/xla_compiler.cc:480:46: error: template argument 1 is invalid
for (std::vectorXlaCompiler::VariableWrite::size_type  i = 0;
^
tensorflow/compiler/tf2xla/xla_compiler.cc:480:46: error: template argument 2 is invalid
tensorflow/compiler/tf2xla/xla_compiler.cc:480:60: error: invalid type in declaration before 'i'
for (std::vectorXlaCompiler::VariableWrite::size_type  i = 0;
^
tensorflow/compiler/tf2xla/xla_compiler.cc:480:60: error: expected ';' before 'i'
tensorflow/compiler/tf2xla/xla_compiler.cc:480:60: error: 'i' was not declared in this scope
tensorflow/compiler/tf2xla/xla_compiler.cc:481:43: error: expected ')' before ';' token
i < result->variable_updates.size(); ++i) {
^
tensorflow/compiler/tf2xla/xla_compiler.cc:480:49: warning: unused variable 'size_type' [-Wunused-variable]
for (std::vectorXlaCompiler::VariableWrite::size_type  i = 0;
^
tensorflow/compiler/tf2xla/xla_compiler.cc:481:47: error: 'i' was not declared in this scope
i < result->variable_updates.size(); ++i) {
^
tensorflow/compiler/tf2xla/xla_compiler.cc:481:48: error: expected ';' before ')' token
i < result->variable_updates.size(); ++i) {
^
tensorflow/compiler/tf2xla/xla_compiler.cc:508:1: error: expected '}' at end of input
}  // namespace tensorflow
^
tensorflow/compiler/tf2xla/xla_compiler.cc: At global scope:
tensorflow/compiler/tf2xla/xla_compiler.cc:508:1: error: expected '}' at end of input
tensorflow/compiler/tf2xla/xla_compiler.cc: In member function 'tensorflow::Status tensorflow::XlaCompiler::CompileGraph(const string&, std::unique_ptrtensorflow::Graph, tensorflow::FunctionLibraryRuntime*, const std::vectortensorflow::XlaCompiler::Argument&, tensorflow::XlaCompiler::CompilationResult*)':
tensorflow/compiler/tf2xla/xla_compiler.cc:508:1: warning: control reaches end of non-void function [-Wreturn-type]
}  // namespace tensorflow
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.